force-app/main/default/objects/leankor__ProjectFinancial__c/leankor__ProjectFinancial__c.object-meta.xml
<CustomObject>
    <description>The financial accounts of the project.</description>
    <label>Project Financial</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Financial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>