force-app/main/default/objects/leankor__ProjectFinancial__c/fields/leankor__AllowFinancialEntry__c.field-meta.xml
<CustomField>
    <fullName>leankor__AllowFinancialEntry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To allow record to be selected for financial transaction.</description>
    <label>Allow Financial Entry</label>
    <type>Checkbox</type>
</CustomField>