force-app/main/default/objects/leankor__ProjectFinancial__c/fields/leankor__FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>leankor__FinancialAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Financial Account.</description>
    <label>Financial Account</label>
    <referenceTo>leankor__FinancialAccount__c</referenceTo>
    <relationshipLabel>Project Financials</relationshipLabel>
    <relationshipName>ProjectFinancials_FinancialAccount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>