force-app/main/default/objects/leankor__ProjectFinancial__c/fields/leankor__FinancialAccountCode__c.field-meta.xml
<CustomField>
    <fullName>leankor__FinancialAccountCode__c</fullName>
    <description>Financial Account Code.</description>
    <formula>leankor__FinancialAccount__r.leankor__Code__c</formula>
    <label>Financial Account Code</label>
    <type>Text</type>
</CustomField>