force-app/main/default/objects/leankor__ProjectFinancial__c/fields/leankor__FinancialBreakdownStructure__c.field-meta.xml
<CustomField>
    <fullName>leankor__FinancialBreakdownStructure__c</fullName>
    <description>The classification level of the financial account within the project.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial Breakdown Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>