force-app/main/default/objects/leankor__ProjectFinancial__c/fields/leankor__Order__c.field-meta.xml
<CustomField>
    <fullName>leankor__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The order of succession per project financial.</description>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>