force-app/main/default/objects/leankor__ProjectFinancial__c/fields/leankor__Project__c.field-meta.xml
<CustomField>
    <fullName>leankor__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The project associated with this financial.</description>
    <label>Project</label>
    <referenceTo>leankor__ProjectRoom__c</referenceTo>
    <relationshipLabel>Project Financials</relationshipLabel>
    <relationshipName>ProjectFinancials_Project</relationshipName>
    <type>Lookup</type>
</CustomField>