force-app/main/default/objects/leankor__ProjectFinancial__c/fields/leankor__ProjectFinancial__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectFinancial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent&apos;s project financial account within the project.</description>
    <label>Project Financial</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.leankor__Project__c</field>
            <operation>equals</operation>
            <valueField>leankor__ProjectFinancial__c.leankor__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leankor__ProjectFinancial__c</referenceTo>
    <relationshipLabel>Project Financials</relationshipLabel>
    <relationshipName>ProjectFinancials_ProjectFinancial</relationshipName>
    <type>Lookup</type>
</CustomField>