force-app/main/default/objects/leankor__ProjectFinancial__c/listViews/leankor__All.listView-meta.xml
<ListView>
    <fullName>leankor__All</fullName>
    <columns>leankor__FinancialBreakdownStructure__c</columns>
    <columns>leankor__Project__c</columns>
    <columns>NAME</columns>
    <columns>leankor__FinancialAccount__c</columns>
    <columns>leankor__ProjectFinancial__c</columns>
    <columns>leankor__AllowFinancialEntry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>